--- a/web/index.html
+++ b/web/index.html
@@ -7,60 +7,35 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Workbench&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="style.css" />
 
     <script src="wasm_exec.js"></script>
-    <script>
-      let outArea;
-
-      function textOut(text) {
-        outArea.textContent += text;
-        requestAnimationFrame(() => {
-          outArea.scrollTop = outArea.scrollHeight;
-        });
-      }
-
-      function requestInput() {
-        const inputBox = document.querySelector("input");
-        inputBox.style.display = "block";
-        inputBox.focus();
-
-        inputBox.onkeydown = function (e) {
-          if (e.key === "Enter") {
-            const value = inputBox.value + "\n";
-            inputBox.value = "";
-            inputBox.style.display = "none";
-            inputSend(value);
-          }
-        };
-      }
-
-      function clearScreen() {
-        outArea.textContent = "";
-      }
-
-      const go = new Go();
-      WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then((result) => {
-        outArea = document.querySelector("pre");
-        go.run(result.instance);
-      });
-    </script>
+    <script src="gozm.js"></script>
   </head>
 
   <body>
-    <nav>File &nbsp; Edit &nbsp; View &nbsp; About</nav>
-    <div class="column">
-      <pre>
-Power on sequence...
-System booting...
-64K dynamic memory available.
-I/O buffers flushed.
+    <nav>
+      <a href="#" id="fileButton">File &nbsp;</a> <a href="#" id="sysButton">System &nbsp;</a>
+      <a href="#" id="sysButton">Info &nbsp;</a>
+      <span style="float: right; font-size: 0.9rem">🔴</span>
+    </nav>
 
-Loading: GOZM v0.1.0 WASM subsystem...
-</pre
-      >
+    <div id="fileMenu" class="menu">
+      <div class="menuItem" onclick="openFile('minizork.z3')">Mini Zork</div>
+      <div class="menuItem" onclick="openFile('moonglow.z3')">Moonglow</div>
+      <div class="menuItem" onclick="openFile('catseye.z3')">Catseye</div>
+      <div class="menuItem" onclick="openFile('advent.z3')">Adventure</div>
+      <div class="menuItem" onclick="openFile('buccaneers_cache.z3')">Buccaneers Cache</div>
+      <div class="menuItem" onclick="openFile('czech.z3')">System Test</div>
+    </div>
+
+    <div class="column" onclick="hideMenus()">
+      <pre></pre>
       <input type="text" />
     </div>
   </body>
