--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <script src="wasm_exec.js"></script>
+    <script src="version.js"></script>
     <script src="gozm.js"></script>
   </head>
 
@@ -26,12 +27,14 @@
     </nav>
 
     <div id="fileMenu" class="menu">
+      <div class="menuItem" onclick="promptFile()">Open...</div>
+      <hr />
+
       <div class="menuItem" onclick="openFile('minizork.z3')">Mini Zork</div>
       <div class="menuItem" onclick="openFile('moonglow.z3')">Moonglow</div>
       <div class="menuItem" onclick="openFile('catseye.z3')">Catseye</div>
       <div class="menuItem" onclick="openFile('advent.z3')">Adventure</div>
       <div class="menuItem" onclick="openFile('buccaneers_cache.z3')">Buccaneers Cache</div>
-      <div class="menuItem" onclick="openFile('czech.z3')">System Test</div>
     </div>
 
     <div class="column" onclick="hideMenus()">
