--- a/web/index.html
+++ b/web/index.html
@@ -61,7 +61,7 @@
 
     <div class="column" onclick="hideMenus()">
       <pre class="themeRetroGlow"></pre>
-      <input type="text" />
+      <input type="text" class="themeRetroGlow" />
     </div>
   </body>
 </html>
