--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
 
     <script src="wasm_exec.js"></script>
     <script src="version.js"></script>
@@ -34,13 +34,14 @@
       <div class="menuItem" onclick="openFile('catseye.z3')">Catseye</div>
       <div class="menuItem" onclick="openFile('advent.z3')">Adventure</div>
       <div class="menuItem" onclick="openFile('buccaneers_cache.z3')">Buccaneers Cache</div>
+      <div class="menuItem" onclick="openFile('duckme.z3')">Duck Me</div>
     </div>
 
     <div id="sysMenu" class="menu" style="left: 100px">
       <div class="menuItem disableNoFile" onclick="save()">Save</div>
       <div class="menuItem disableNoFile" onclick="load()">Restore</div>
       <hr />
-      <div class="menuItem" onclick="reset()">Reset System</div>
+      <div class="menuItem" onclick="reset();">Reset System</div>
     </div>
 
     <div id="prefsMenu" class="menu" style="left: 150px; width: 250px">
