Added infocom games

--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,15 @@
       <div class="menuItem" onclick="openFile('advent.z3')">Adventure</div>
       <div class="menuItem" onclick="openFile('buccaneers_cache.z3')">Buccaneers Cache</div>
       <div class="menuItem" onclick="openFile('duckme.z3')">Duck Me</div>
+      <hr />
+      <div class="menuItem" onclick="openFile('zork1-r119-s880429.z3')">Zork I</div>
+      <div class="menuItem" onclick="openFile('zork2-r63-s860811.z3')">Zork II</div>
+      <div class="menuItem" onclick="openFile('zork3-r25-s860811.z3')">Zork III</div>
+      <div class="menuItem" onclick="openFile('enchanter-r24-s851118.z3')">Enchanter</div>
+      <div class="menuItem" onclick="openFile('hitchhiker-r60-s861002.z3')">Hitchhiker's Guide</div>
+      <div class="menuItem" onclick="openFile('lurkinghorror-r221-s870918.z3')">The Lurking Horror</div>
+      <div class="menuItem" onclick="openFile('planetfall-r39-s880501.z3')">Planetfall</div>
+      <div class="menuItem" onclick="openFile('wishbringer-r69-s850920.z3')">Wishbringer</div>
     </div>
 
     <div id="sysMenu" class="menu" style="left: 100px">
