--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
     />
 
     <link rel="stylesheet" href="assets/style.css" />
+    <link rel="shortcut icon" href="assets/icon.png" type="image/png" />
 
     <script src="wasm_exec.js"></script>
     <script src="version.js"></script>
