--- a/web/index.html
+++ b/web/index.html
@@ -7,10 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Workbench&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Workbench&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="assets/style.css" />
     <link rel="shortcut icon" href="assets/icon.png" type="image/png" />
@@ -31,8 +28,9 @@
     <div id="infoMenu" class="menu" style="left: 200px"></div>
 
     <div class="column">
-      <pre class="themeRetroGlow"></pre>
-      <input type="text" class="themeRetroGlow" autocapitalize="off" autocomplete="off" autocorrect="off" />
+      <pre class="themeRetroGlow" tabindex="0"></pre>
+      <!-- Hidden input for mobile keyboard support -->
+      <input type="text" id="hiddenInput" autocapitalize="off" autocomplete="off" autocorrect="off" spellcheck="false" />
     </div>
   </body>
 </html>
