dialog boxes are such fun

--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,10 @@
 
     <div class="column">
       <pre class="themeRetroGlow" tabindex="0"></pre>
+      <pre class="themeRetroGlow" id="modal">
+        <span></span>
+        <button onclick="document.getElementById('modal').style.display = 'none'">[ OK ]</button>
+      </pre>
       <!-- Hidden input for mobile keyboard support -->
       <input type="text" id="hiddenInput" autocapitalize="off" autocomplete="off" autocorrect="off" spellcheck="false" />
     </div>
